--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -23,4 +23,10 @@
         android:text="Take a picture!"
         />
 
+    <ImageView
+        android:layout_below="@+id/button"
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
 </RelativeLayout>
