--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -24,6 +24,8 @@
         />
 
     <ImageView
+        android:layout_centerInParent="true"
+        android:src="@mipmap/ic_launcher"
         android:layout_below="@+id/button"
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
