--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -24,12 +24,12 @@
         />
 
     <ImageView
-        android:layout_centerInParent="true"
-        android:src="@mipmap/ic_launcher"
-        android:layout_below="@+id/button"
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button"
+        android:layout_centerInParent="true"
+        android:src="@mipmap/ic_launcher" />
 
     <ImageView
         android:layout_marginTop="20dp"
