--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,4 +22,18 @@
         android:layout_below="@id/button"
         android:layout_centerInParent="true"
         android:text="Button2" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button3"
+        android:layout_below="@id/button2"
+        android:layout_centerInParent="true"
+        android:text="Button3" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button4"
+        android:layout_below="@id/button3"
+        android:layout_centerInParent="true"
+        android:text="Button4" />
 </RelativeLayout>
