--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,4 +36,18 @@
         android:layout_below="@id/button3"
         android:layout_centerInParent="true"
         android:text="Button4" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button5"
+        android:layout_below="@id/button4"
+        android:layout_centerInParent="true"
+        android:text="Button5" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button6"
+        android:layout_below="@id/button5"
+        android:layout_centerInParent="true"
+        android:text="Button6" />
 </RelativeLayout>
