--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,26 +28,26 @@
         android:id="@+id/button3"
         android:layout_below="@id/button2"
         android:layout_centerInParent="true"
-        android:text="Button3" />
+        android:text="Generate a Key" />
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/button4"
         android:layout_below="@id/button3"
         android:layout_centerInParent="true"
-        android:text="Button4" />
+        android:text="Get a Key" />
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/button5"
         android:layout_below="@id/button4"
         android:layout_centerInParent="true"
-        android:text="Button5" />
+        android:text="PreferencesTest" />
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/button6"
         android:layout_below="@id/button5"
         android:layout_centerInParent="true"
-        android:text="Button6" />
+        android:text="GeneratePasswordTest" />
 </RelativeLayout>
