--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,4 +57,11 @@
         android:layout_below="@id/button6"
         android:layout_centerInParent="true"
         android:text="Encryption" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button8"
+        android:layout_below="@id/button7"
+        android:layout_centerInParent="true"
+        android:text="Decryption" />
 </RelativeLayout>
