--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="152dp"
-        android:text="Button" />
+        android:text="Test SQLCipher" />
 
     <Button
         android:layout_width="wrap_content"
@@ -21,5 +21,5 @@
         android:id="@+id/button2"
         android:layout_below="@id/button"
         android:layout_centerInParent="true"
-        android:text="Button2" />
+        android:text="Gallery Sqlcipher" />
 </RelativeLayout>
