--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     tools:context=".MainActivity">
 
 
@@ -11,8 +12,6 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="152dp"
         android:text="Test SQLCipher" />
 
     <Button
@@ -20,6 +19,17 @@
         android:layout_height="wrap_content"
         android:id="@+id/button2"
         android:layout_below="@id/button"
-        android:layout_centerInParent="true"
         android:text="Gallery Sqlcipher" />
+    <TextView
+        android:id="@+id/txtView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Use your fingerprint to login"
+        android:layout_below="@id/button2" />
+    <Button
+        android:id="@+id/login_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/txtView"
+        android:text="Login" />
 </RelativeLayout>
