--- a/app/src/main/res/layout/recycler_view_single_item.xml
+++ b/app/src/main/res/layout/recycler_view_single_item.xml
@@ -13,9 +13,9 @@
 
         <ImageView
             android:id="@+id/myImageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="0dp"
             android:layout_gravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
