--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -8,7 +8,8 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginHorizontal="2.5dp"
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
