--- a/app/src/main/res/layout/recycler_view_single_item.xml
+++ b/app/src/main/res/layout/recycler_view_single_item.xml
@@ -2,6 +2,8 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_marginHorizontal="2.5dp"
+    android:layout_marginVertical="2.5dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -15,13 +17,8 @@
             android:id="@+id/myImageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="0dp"
             android:layout_gravity="center"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_launcher_background"
-            tools:layout_editor_absoluteX="151dp"
-            tools:layout_editor_absoluteY="0dp" />
+            android:contentDescription="TODO" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
