--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -7,6 +7,14 @@
     tools:context=".ThirdActivity">
 
 
+        <ImageView
+            android:id="@+id/singleImage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            app:srcCompat="@drawable/ic_launcher_background" />
+
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_marginTop="50dp"
         android:layout_marginHorizontal="2.5dp"
