--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -8,6 +8,7 @@
 
 
         <ImageView
+            android:layout_centerInParent="true"
             android:id="@+id/singleImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
