--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -8,10 +8,11 @@
 
 
         <ImageView
+            android:background="@color/black"
             android:layout_centerInParent="true"
             android:id="@+id/singleImage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:visibility="invisible"
             app:srcCompat="@drawable/ic_launcher_background" />
 
