--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -7,7 +7,7 @@
     tools:context=".ThirdActivity">
 
 
-        <ImageView
+        <com.ortiz.touchview.TouchImageView
             android:background="@color/black"
             android:layout_centerInParent="true"
             android:id="@+id/singleImage"
