--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,4 +35,11 @@
         android:id="@+id/button2"
         android:layout_below="@id/login_btn"
         android:text="Gallery Sqlcipher" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Go to 3rd activity" />
 </LinearLayout>
