--- a/app/src/main/res/layout/recycler_view_single_folder.xml
+++ b/app/src/main/res/layout/recycler_view_single_folder.xml
@@ -23,6 +23,19 @@
                 android:id="@+id/folderTitle"
                 android:text="Folder name" />
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/folderCount"
+                android:text="Folder Count" />
+
+            <ImageView
+                android:id="@+id/singleImageFolder"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_launcher_background"
+                />
+
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </RelativeLayout>
