--- a/app/src/main/res/layout/recycler_view_single_folder.xml
+++ b/app/src/main/res/layout/recycler_view_single_folder.xml
@@ -1,41 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardBackgroundColor="@color/lightBlueRV"
+    android:layout_margin="5dp"
     android:layout_height="wrap_content">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
-        android:layout_marginTop="20dp"
+    <TextView
+        android:layout_marginTop="10dp"
+        android:textSize="36sp"
+        android:layout_marginLeft="100dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:id="@+id/folderTitle"
+        android:text="Folder name" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingTop="25dp"
-            android:layout_marginTop="75dp" >
+    <TextView
+        android:layout_marginTop="55dp"
+        android:layout_marginLeft="100dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/folderCount"
+        android:text="Folder Count" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/folderTitle"
-                android:text="Folder name" />
+    <ImageView
+        android:layout_marginTop="26.5dp"
+        android:layout_marginLeft="335dp"
+        android:id="@+id/arrow"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/folderCount"
-                android:text="Folder Count" />
+    <ImageView
+        android:id="@+id/singleImageFolder"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_baseline_image_not_supported_24" />
 
-            <ImageView
-                android:id="@+id/singleImageFolder"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_launcher_background"
-                />
-
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
-</RelativeLayout>
+</androidx.cardview.widget.CardView>
