--- a/app/src/main/res/layout/recycler_view_single_item.xml
+++ b/app/src/main/res/layout/recycler_view_single_item.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginHorizontal="2.5dp"
     android:layout_marginVertical="2.5dp"
+    android:background="@color/darkBlueBG"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
