--- a/app/src/main/res/layout/activity_folder.xml
+++ b/app/src/main/res/layout/activity_folder.xml
@@ -6,10 +6,25 @@
     android:background="@color/darkBlueBG"
     android:layout_height="match_parent">
 
+    <TextView
+        android:textSize="30dp"
+        android:id="@+id/albumText"
+        android:textAlignment="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Albums"
+        app:layout_constraintBottom_toBottomOf="@+id/folderRecyclerView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.019" />
+
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginTop="70dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="5dp"
+        android:layout_marginHorizontal="5dp"
         android:id="@+id/folderRecyclerView" />
 
     <Button
