--- a/app/src/main/res/layout/recycler_view_single_folder.xml
+++ b/app/src/main/res/layout/recycler_view_single_folder.xml
@@ -4,12 +4,12 @@
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardBackgroundColor="@color/lightBlueRV"
-    android:layout_margin="5dp"
-    android:layout_height="wrap_content">
+    android:layout_marginVertical="5dp"
+    android:layout_height="91.5dp">
 
     <TextView
-        android:layout_marginTop="10dp"
-        android:textSize="36sp"
+        android:layout_marginTop="16dp"
+        android:textSize="28dp"
         android:layout_marginLeft="100dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -17,7 +17,7 @@
         android:text="Folder name" />
 
     <TextView
-        android:layout_marginTop="55dp"
+        android:layout_marginTop="53dp"
         android:layout_marginLeft="100dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -33,9 +33,19 @@
         android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />
 
     <ImageView
+        android:background="@drawable/border"
+        android:layout_gravity="center_vertical"
         android:id="@+id/singleImageFolder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_baseline_image_not_supported_24" />
 
+    <ImageView
+        android:background="@drawable/border"
+        android:layout_gravity="center_vertical"
+        android:paddingHorizontal="25dp"
+        android:id="@+id/singleImageFolder2"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:src="@drawable/ic_baseline_image_not_supported_24" />
 </androidx.cardview.widget.CardView>
