--- a/app/src/main/res/layout/activity_folder.xml
+++ b/app/src/main/res/layout/activity_folder.xml
@@ -27,12 +27,21 @@
         android:layout_marginHorizontal="5dp"
         android:id="@+id/folderRecyclerView" />
 
-    <Button
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/addFolderButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add a folder"
+        android:contentDescription="TODO"
+        app:backgroundTint="@color/blueButton"
+        android:src="@drawable/ic_baseline_add_242"
+        app:borderWidth="0dp"
+        app:elevation="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="@+id/albumText"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.968" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
