--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -7,19 +7,79 @@
     android:layout_height="match_parent"
     tools:context=".ThirdActivity">
 
+    <ImageView
+        android:id="@+id/backButton"
+        android:layout_marginTop="35dp"
+        android:layout_marginLeft="15dp"
+        android:src="@drawable/ic_baseline_arrow_back_24"
+        android:layout_width="32dp"
+        android:layout_height="32dp" />
 
-        <com.ortiz.touchview.TouchImageView
-            android:background="@color/black"
-            android:layout_centerInParent="true"
-            android:id="@+id/singleImage"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="invisible"
-            app:srcCompat="@drawable/ic_launcher_background" />
+    <androidx.cardview.widget.CardView
+        android:backgroundTint="@color/hintColor"
+        android:layout_marginTop="65dp"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_centerHorizontal="true"
+        android:elevation="0dp"
+        app:cardCornerRadius="45dp" >
+
+        <androidx.cardview.widget.CardView
+            android:backgroundTint="@color/lightBlueRV"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_centerHorizontal="true"
+            android:elevation="0dp"
+            android:layout_gravity="center"
+            app:cardCornerRadius="40dp">
+
+            <ImageView
+
+                android:scaleType="centerCrop"
+                android:id="@+id/folderImage"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:src="@drawable/ic_baseline_image_not_supported_24" />
+
+        </androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>
+
+    <TextView
+        android:textSize="19sp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="158dp"
+        android:id="@+id/folderTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:textSize="15sp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="182dp"
+        android:id="@+id/folderCountNumber"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+<!--    <ImageView-->
+<!--        android:background="@drawable/circle"-->
+<!--        android:layout_centerHorizontal="true"-->
+<!--        android:layout_marginTop="45dp"-->
+<!--        android:id="@+id/folderImage"-->
+<!--        android:layout_width="200dp"-->
+<!--        android:layout_height="200dp" />-->
+
+
+    <com.ortiz.touchview.TouchImageView
+        android:background="@color/black"
+        android:layout_centerInParent="true"
+        android:id="@+id/singleImage"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="invisible"
+        app:srcCompat="@drawable/ic_launcher_background" />
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="215dp"
         android:layout_marginHorizontal="2.5dp"
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
@@ -30,6 +90,7 @@
         android:layout_height="match_parent">
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
+            app:backgroundTint="@color/blueButton"
             android:id="@+id/fab_main"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -42,6 +103,7 @@
             app:layout_constraintEnd_toEndOf="parent" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
+            app:backgroundTint="@color/blueButton"
             android:id="@+id/fab_takePhoto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -52,26 +114,6 @@
             app:layout_constraintStart_toStartOf="@+id/fab_main"
             app:srcCompat="@drawable/ic_baseline_photo_camera_24" />
 
-<!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
-<!--            android:id="@+id/fab_deletePhoto"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginEnd="24dp"-->
-<!--            android:layout_marginBottom="16dp"-->
-<!--            app:fabSize="normal"-->
-<!--            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--            app:layout_constraintEnd_toStartOf="@+id/fab_main"-->
-<!--            app:srcCompat="@drawable/ic_baseline_delete_outline_24" />-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/deletePhotoText"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginBottom="16dp"-->
-<!--            android:text="Delete Photo"-->
-<!--            app:layout_constraintBottom_toTopOf="@+id/fab_deletePhoto"-->
-<!--            app:layout_constraintEnd_toEndOf="@+id/fab_deletePhoto"-->
-<!--            app:layout_constraintStart_toStartOf="@+id/fab_deletePhoto" />-->
 
         <TextView
             android:id="@+id/takePhotoText"
@@ -84,6 +126,7 @@
             app:layout_constraintTop_toTopOf="@+id/fab_takePhoto" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
+            app:backgroundTint="@color/blueButton"
             android:id="@+id/fab_addPhoto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
